tests/ui/bitxor.stderr
error[E0277]: the trait bound `std::array::IntoIter<({integer}, {integer}), 2>: SortedDisjoint<{integer}>` is not satisfied
 --> tests/ui/bitxor.rs:7:23
  |
7 |     let _c = a.bitxor(b);
  |                ------ ^ the trait `SortedDisjoint<{integer}>` is not implemented for `std::array::IntoIter<({integer}, {integer}), 2>`
  |                |
  |                required by a bound introduced by this call
  |
  = help: the following other types implement trait `SortedDisjoint<T>`:
            CheckSortedDisjoint<T, I>
            DynSortedDisjoint<'a, T>
            IntoRangesIter<T>
            NotIter<T, I>
            RangesIter<'_, T>
            UnionIter<T, I>
            itertools::tee::Tee<I>
  = note: required for `IntoRangesIter<{integer}>` to implement `BitXor<std::array::IntoIter<({integer}, {integer}), 2>>`
